Bug found while training fixed

--- a/AHLT_Drug_Interaction_CRF.ipynb
+++ b/AHLT_Drug_Interaction_CRF.ipynb
@@ -105,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 39s, sys: 2.02 s, total: 1min 41s\n",
-      "Wall time: 2min 30s\n"
+      "CPU times: user 926 ms, sys: 40.1 ms, total: 966 ms\n",
+      "Wall time: 967 ms\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of total sentences in the training dataset: 12998\n"
+      "Number of total sentences in the training dataset: 308\n"
      ]
     }
    ],
@@ -173,37 +173,52 @@
     {
      "data": {
       "text/plain": [
-       "('Interaction with central nervous system depressants other than benzodiazepines has not been specifically studied;',\n",
-       " 'central nervous system depressants',\n",
-       " 'benzodiazepines',\n",
-       " ['central nervous system depressants', 'benzodiazepines'],\n",
-       " ['NN',\n",
-       "  'IN',\n",
+       "('Population pharmacokinetic analyses revealed that MTX, NSAIDs, corticosteroids, and TNF blocking agents did not influence abatacept clearance.',\n",
+       " 'MTX',\n",
+       " 'corticosteroids',\n",
+       " ['MTX', 'NSAIDs', 'corticosteroids', 'TNF blocking agents', 'abatacept'],\n",
+       " ['NNP',\n",
        "  'JJ',\n",
+       "  'NNS',\n",
+       "  'VBD',\n",
+       "  'IN',\n",
+       "  'NNP',\n",
+       "  ',',\n",
+       "  'NNP',\n",
+       "  ',',\n",
+       "  'NNS',\n",
+       "  ',',\n",
+       "  'CC',\n",
+       "  'NNP',\n",
+       "  'VBG',\n",
+       "  'NNS',\n",
+       "  'VBD',\n",
+       "  'RB',\n",
+       "  'VB',\n",
        "  'JJ',\n",
        "  'NN',\n",
-       "  'VBZ',\n",
-       "  'JJ',\n",
-       "  'IN',\n",
-       "  'NNS',\n",
-       "  'VBZ',\n",
-       "  'RB',\n",
-       "  'VBN',\n",
-       "  'RB',\n",
-       "  'VBN',\n",
-       "  ':'],\n",
-       " ['Interaction',\n",
-       "  'with',\n",
-       "  'central nervous system depressants',\n",
-       "  'other',\n",
-       "  'than',\n",
-       "  'benzodiazepines',\n",
-       "  'has',\n",
+       "  '.'],\n",
+       " ['Population',\n",
+       "  'pharmacokinetic',\n",
+       "  'analyses',\n",
+       "  'revealed',\n",
+       "  'that',\n",
+       "  'MTX',\n",
+       "  'NSAIDs',\n",
+       "  ',',\n",
+       "  'corticosteroids',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'TNF',\n",
+       "  'blocking',\n",
+       "  'agents',\n",
+       "  'did',\n",
        "  'not',\n",
-       "  'been',\n",
-       "  'specifically',\n",
-       "  'studied',\n",
-       "  ';'],\n",
+       "  'influence',\n",
+       "  'abatacept',\n",
+       "  'clearance',\n",
+       "  '.'],\n",
+       " 'false',\n",
        " 'none')"
       ]
      },
@@ -234,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +260,7 @@
     "    \n",
     "def sent2features(tupl, i, database):\n",
     "    \n",
-    "    if len(tupl) != 7:\n",
+    "    if len(tupl) != 8:\n",
     "        raise ValueError('The introduced tuple does not have the correct length')\n",
     "    sent = tupl[0]\n",
     "    ent1 = tupl[1]\n",
@@ -328,13 +343,15 @@
     "    \n",
     "        \n",
     "    # Context features\n",
-    "    #'n_tokens_bw_entities': countTokensBetweenEntities(sent, ent1, ent2),\n",
+    "    'n_tokens_bw_entities': countTokensBetweenEntities(tok_sent, ent1, ent2),\n",
     "    'n_entities_bw_entities': countEntitiesBetweenEntities(tok_sent, ent1, ent2, ent_list),\n",
     "    'n_modal_verbs_bw_entities': countModalVerbsBetweenEntities(tok_sent, ent1, ent2),\n",
     "    'sentence_contains_neg': sentenceContainsNegation(tok_sent),\n",
-    "    'keywords_bw_entities': keyWordsBetweenEntities(tok_sent, ent1, ent2)\n",
-    "    'first_modal_sentence': getFirstModalVerb(tok_sent)\n",
-    "    'POS_tags_sentence_simpl': createSimplifiedPOSPath(pos_tags)    \n",
+    "    'keywords_bw_entities': keyWordsBetweenEntities(tok_sent, ent1, ent2),\n",
+    "    'first_modal_sentence': getFirstModalVerb(tok_sent),\n",
+    "    'POS_tags_sentence_simpl': createSimplifiedPOSPath(pos_tags),\n",
+    "    '2_grams_bw_entities': getNgramsBetweenEntities(tok_sent, ent1, ent2, 2),\n",
+    "    '3_grams_bw_entities': getNgramsBetweenEntities(tok_sent, ent1, ent2, 3)\n",
     "        \n",
     "    }\n",
     "\n",
@@ -346,12 +363,12 @@
     "        return(sent2features(text, i, drugbank_db))\n",
     "\n",
     "def text2labels(text):\n",
-    "    return text[4]"
+    "    return text[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -360,8 +377,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.3 s, sys: 250 ms, total: 10.5 s\n",
-      "Wall time: 19.5 s\n"
+      "CPU times: user 143 ms, sys: 4.75 ms, total: 147 ms\n",
+      "Wall time: 145 ms\n"
      ]
     }
    ],
@@ -385,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -394,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training sentences:  5458\n",
-      "Number of testing sentences:  5200\n"
+      "Number of training sentences:  128\n",
+      "Number of testing sentences:  124\n"
      ]
     }
    ],
@@ -409,75 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'ent1': 'norfloxacin',\n",
-       "  'ent1_all_uppercase_letters': 0,\n",
-       "  'ent1_caps_mix': 0,\n",
-       "  'ent1_contains_capital_letter': 0,\n",
-       "  'ent1_contains_real_numbers': 0,\n",
-       "  'ent1_drug_prefix': 'none',\n",
-       "  'ent1_drug_sufix': 'none',\n",
-       "  'ent1_has_digit': 0,\n",
-       "  'ent1_initial_capital_letter': 0,\n",
-       "  'ent1_initial_digit': 0,\n",
-       "  'ent1_intermediate_dash': 0,\n",
-       "  'ent1_isInDB': True,\n",
-       "  'ent1_is_Dash': 0,\n",
-       "  'ent1_is_end_punctuation': 0,\n",
-       "  'ent1_is_roman_letter': 0,\n",
-       "  'ent1_letter_and_num': 0,\n",
-       "  'ent1_many_numbers': 0,\n",
-       "  'ent1_punctuation': 0,\n",
-       "  'ent1_single_capital_letter': 0,\n",
-       "  'ent1_single_digit': 0,\n",
-       "  'ent1_word[-2:]': 'in',\n",
-       "  'ent1_word[-3:]': 'cin',\n",
-       "  'ent1_word[-4:]': 'acin',\n",
-       "  'ent1_word[-5:]': 'xacin',\n",
-       "  'ent2': 'quinine',\n",
-       "  'ent2_all_uppercase_letters': 0,\n",
-       "  'ent2_caps_mix': 0,\n",
-       "  'ent2_contains_capital_letter': 0,\n",
-       "  'ent2_contains_real_numbers': 0,\n",
-       "  'ent2_drug_prefix': 'none',\n",
-       "  'ent2_drug_sufix': 'none',\n",
-       "  'ent2_has_digit': 0,\n",
-       "  'ent2_initial_capital_letter': 0,\n",
-       "  'ent2_initial_digit': 0,\n",
-       "  'ent2_intermediate_dash': 0,\n",
-       "  'ent2_isInDB': True,\n",
-       "  'ent2_is_Dash': 0,\n",
-       "  'ent2_is_end_punctuation': 0,\n",
-       "  'ent2_is_roman_letter': 0,\n",
-       "  'ent2_letter_and_num': 0,\n",
-       "  'ent2_many_numbers': 0,\n",
-       "  'ent2_punctuation': 0,\n",
-       "  'ent2_single_capital_letter': 0,\n",
-       "  'ent2_single_digit': 0,\n",
-       "  'ent2_word[-2:]': 'ne',\n",
-       "  'ent2_word[-3:]': 'ine',\n",
-       "  'ent2_word[-4:]': 'nine',\n",
-       "  'ent2_word[-5:]': 'inine',\n",
-       "  'keywords_bw_entities': 0,\n",
-       "  'n_entities_bw_entities': 0,\n",
-       "  'n_modal_verbs_bw_entities': 0,\n",
-       "  'sentence_contains_neg': 0}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['DT', 'NN', 'IN', 'NNS', 'IN', 'NNP', 'JJ', 'NNS', 'VBD', 'CD', 'CC', 'JJR', 'IN', 'DT', 'JJ', 'JJ', 'NNS', 'IN', 'NNP', ':', 'NNP', ',', 'NNP', ',', 'NNS', ',', 'NNP', 'VBG', 'NNS', ',', 'NN', ',', 'NN', ',', 'NN', ',', 'NN', ',', 'RB', ',', 'NN', ',', 'CC', 'NN', '.']]\n"
+     ]
     }
    ],
    "source": [
-    "X_train[10]"
+    "print(y_train[10])"
    ]
   },
   {
@@ -492,11 +455,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected bytes, list found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-beaed5064f42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"# We don't want to include the 'none' label for the optimization\\nlabels = ['mechanism', 'effect', 'int', 'advise']\\n\\n# Define fixed parameters and parameters to search\\ncrf = sklearn_crfsuite.CRF(\\n    algorithm='lbfgs',\\n    max_iterations=100,\\n    all_possible_transitions=True\\n)\\n\\n\\n# search\\n'''\\n\\n# use the same metric for evaluation\\nf1_scorer = make_scorer(metrics.flat_f1_score,\\n                        average='weighted', labels=labels)\\n\\n\\nparams_space = {\\n    'c1': scipy.stats.expon(scale=0.5),\\n    'c2': scipy.stats.expon(scale=0.05),\\n}\\n\\nrs = RandomizedSearchCV(crf, params_space,\\n                        cv=3,\\n                        verbose=1,\\n                        n_jobs=-1,\\n                        n_iter=20,\\n                        scoring=f1_scorer)\\n\\n\\n'''\\n\\ncrf.fit(X_val, y_val)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2118\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2119\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2120\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2121\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<decorator-gen-60>\u001b[0m in \u001b[0;36mtime\u001b[0;34m(self, line, cell, local_ns)\u001b[0m\n",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    191\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 193\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    194\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/IPython/core/magics/execution.py\u001b[0m in \u001b[0;36mtime\u001b[0;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[1;32m   1175\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             \u001b[0mst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclock2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1177\u001b[0;31m             \u001b[0mexec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocal_ns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclock2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn_crfsuite/estimator.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, X_dev, y_dev)\u001b[0m\n\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mxseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myseq\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 314\u001b[0;31m             \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myseq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpycrfsuite/_pycrfsuite.pyx\u001b[0m in \u001b[0;36mpycrfsuite._pycrfsuite.BaseTrainer.append\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/pycrfsuite/_pycrfsuite.cpython-35m-darwin.so\u001b[0m in \u001b[0;36mvector.from_py.__pyx_convert_vector_from_py_std_3a__3a_string\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/pycrfsuite/_pycrfsuite.cpython-35m-darwin.so\u001b[0m in \u001b[0;36mstring.from_py.__pyx_convert_string_from_py_std__in_string\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected bytes, list found"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# We don't want to include the 'none' label for the optimization\n",
@@ -508,23 +492,32 @@
     "    max_iterations=100,\n",
     "    all_possible_transitions=True\n",
     ")\n",
-    "params_space = {\n",
-    "    'c1': scipy.stats.expon(scale=0.5),\n",
-    "    'c2': scipy.stats.expon(scale=0.05),\n",
-    "}\n",
+    "\n",
+    "\n",
+    "# search\n",
+    "'''\n",
     "\n",
     "# use the same metric for evaluation\n",
     "f1_scorer = make_scorer(metrics.flat_f1_score,\n",
     "                        average='weighted', labels=labels)\n",
     "\n",
-    "# search\n",
+    "\n",
+    "params_space = {\n",
+    "    'c1': scipy.stats.expon(scale=0.5),\n",
+    "    'c2': scipy.stats.expon(scale=0.05),\n",
+    "}\n",
+    "\n",
     "rs = RandomizedSearchCV(crf, params_space,\n",
     "                        cv=3,\n",
     "                        verbose=1,\n",
     "                        n_jobs=-1,\n",
     "                        n_iter=20,\n",
     "                        scoring=f1_scorer)\n",
-    "rs.fit(X_val, y_val)"
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "crf.fit(X_val, y_val)"
    ]
   },
   {
