New features added, models retrained

--- a/AHLT_Drug_Interaction_CRF.ipynb
+++ b/AHLT_Drug_Interaction_CRF.ipynb
@@ -106,8 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 7s, sys: 1.46 s, total: 2min 8s\n",
-      "Wall time: 2min 9s\n"
+      "CPU times: user 2min 7s, sys: 1.46 s, total: 2min 9s\n",
+      "Wall time: 2min 10s\n"
      ]
     }
    ],
@@ -185,8 +185,8 @@
      "text": [
       "Number of training sentences:  26005\n",
       "Number of testing sentences:  5265\n",
-      "CPU times: user 14 s, sys: 277 ms, total: 14.3 s\n",
-      "Wall time: 14.3 s\n"
+      "CPU times: user 16.6 s, sys: 419 ms, total: 17.1 s\n",
+      "Wall time: 17.5 s\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -241,8 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.7 s, sys: 301 ms, total: 25 s\n",
-      "Wall time: 25.6 s\n"
+      "CPU times: user 26.8 s, sys: 312 ms, total: 27.1 s\n",
+      "Wall time: 27.6 s\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "#c1 = rs.best_params_['c1']\n",
     "#c2 = rs.best_params_['c2']\n",
     "\n",
-    "crf = sklearn_crfsuite.CRF(\n",
+    "crf_mod1 = sklearn_crfsuite.CRF(\n",
     "    algorithm='lbfgs',\n",
     "    c1=0.1,\n",
     "    c2=0.1,\n",
@@ -260,18 +260,50 @@
     "    all_possible_transitions=True\n",
     ")\n",
     "\n",
-    "crf.fit(X_train, y_train_int)"
+    "crf_mod1.fit(X_train, y_train_int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "y_pred_int = crf.predict(X_test)"
+    "y_pred_int = crf_mod1.predict(X_test)\n",
+    "\n",
+    "for i in range(len(y_pred_int)):\n",
+    "    if y_pred_int[i][0] is None:\n",
+    "        print('y_pred index: ', i)\n",
+    "        y_pred_int[i][0] = 'none'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      false      0.903     0.894     0.899      4381\n",
+      "       true      0.500     0.525     0.512       884\n",
+      "\n",
+      "avg / total      0.835     0.832     0.834      5265\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.flat_classification_report(\n",
+    "    y_test_int, y_pred_int, digits=3\n",
+    "))"
    ]
   },
   {
@@ -290,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -345,8 +377,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.61 s, sys: 61.2 ms, total: 5.67 s\n",
-      "Wall time: 5.75 s\n"
+      "CPU times: user 6.22 s, sys: 114 ms, total: 6.34 s\n",
+      "Wall time: 6.48 s\n"
      ]
     }
    ],
@@ -356,7 +388,7 @@
     "#c1 = rs.best_params_['c1']\n",
     "#c2 = rs.best_params_['c2']\n",
     "\n",
-    "crf = sklearn_crfsuite.CRF(\n",
+    "crf_mod2 = sklearn_crfsuite.CRF(\n",
     "    algorithm='lbfgs',\n",
     "    c1=0.1,\n",
     "    c2=0.1,\n",
@@ -364,18 +396,53 @@
     "    all_possible_transitions=True\n",
     ")\n",
     "\n",
-    "crf.fit(X_train_filtered, y_train_filtered)"
+    "crf_mod2.fit(X_train_filtered, y_train_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_pred_type = crf_mod2.predict(X_test_filtered)\n",
+    "\n",
+    "for i in range(len(y_pred_type)):\n",
+    "    if y_pred_type[i][0] is None:\n",
+    "        print('y_pred index: ', i)\n",
+    "        y_pred_type[i][0] = 'none'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "  mechanism      0.336     0.843     0.481       134\n",
+      "        int      0.524     0.193     0.282        57\n",
+      "     advise      0.370     0.763     0.499       118\n",
+      "     effect      0.402     0.852     0.547       155\n",
+      "\n",
+      "avg / total      0.390     0.746     0.483       464\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred_type = crf.predict(X_test_filtered)"
+    "labels = ['mechanism', 'int', 'advise', 'effect']\n",
+    "print(metrics.flat_classification_report(\n",
+    "    y_test_filtered, y_pred_type, labels = labels, digits=3\n",
+    "))"
    ]
   },
   {
@@ -389,79 +456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(len(y_pred)):\n",
-    "    if y_pred[i][0] is None:\n",
-    "        print('y_pred index: ', i)\n",
-    "        y_pred[i][0] = 'none'\n",
-    "    \n",
-    "    if y_test[i][0] is None:\n",
-    "        print('y_test index:' , i)\n",
-    "        y_test[i][0] = 'none'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "  mechanism      0.353     0.856     0.500       139\n",
-      "        int      0.355     0.196     0.253        56\n",
-      "     advise      0.360     0.754     0.488       130\n",
-      "     effect      0.354     0.868     0.503       159\n",
-      "\n",
-      "avg / total      0.355     0.756     0.469       484\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "labels = ['mechanism', 'int', 'advise', 'effect']\n",
-    "print(metrics.flat_classification_report(\n",
-    "    y_test_filtered, y_pred_type, labels = labels, digits=3\n",
-    "))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndef transformStrCategoriesIntoInts(vector):\\n    res = []\\n    for el in vector:\\n        if el == 'none' or el == 'None':\\n            res.append(0)\\n        elif el == 'mechanism':\\n            res.append(1)\\n        elif el == 'effect':\\n            res.append(2)\\n        elif el == 'int':\\n            res.append(3)\\n        elif el == 'advise':\\n            res.append(4)\\n        else:\\n            print(el)\\n            print(type(el))\\n            print(vector.index(el))\\n    return(res)\\n\""
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "'''\n",
     "def transformStrCategoriesIntoInts(vector):\n",
@@ -574,22 +573,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef print_state_features(state_features):\\n    for (attr, label), weight in state_features:\\n        print(\"%0.6f %-8s %s\" % (weight, label, attr))\\n\\nprint(\"Top positive:\")\\nprint_state_features(collections.Counter(crf.state_features_).most_common(15))\\n\\nprint(\"\\nTop negative:\")\\nprint_state_features(collections.Counter(crf.state_features_).most_common()[-15:])\\n'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "def print_state_features(state_features):\n",
